# woodshed-crewai

./: README.md  prompts.md
first/: README.md  pyproject.toml
first/reports/: ai-agents.md  virtual-travel-comparison.md  virtual-travel-custom-tool.md  virtual-travel-langchain-tool.md  virtual-travel.md
first/src/first/: crew.py  main.py
first/src/first/config/: agents.yaml  tasks.yaml
first/src/first/tools/: custom_serper_news_tool.py
jba/src/jba/: crew.py  main.py
jba/src/jba/config/: agents.yaml  tasks.yaml
jba/src/jba/tools/: duck_duck_go_search_tool.py
mills/: report.md
