[tool.poetry]
name = "first"
version = "0.1.0"
description = "first using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
first = "first.main:run"
run_crew = "first.main:run"
train = "first.main:train"
replay = "first.main:replay"
test = "first.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
